--- a/index.css
+++ b/index.css
@@ -140,3 +140,146 @@ button:hover{
    
     margin-top: 2px; 
 }
+
+@media  all and (max-width:505px) and (min-width:300px)
+{
+    body{
+        background-size:800%;
+        
+    }
+    h1{
+        margin-top: 2px;
+        font-size: 25px;
+        text-align: center;
+    }
+    .container{
+        width: 550px;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .box{
+        
+        width:400px;
+        height: auto;
+        margin-block-start: 10px;
+        margin-inline: 0px;
+        border-radius: 20px;
+       
+        display: block;
+      
+      background-color: rgba(0, 0, 0, 0.564);
+    }
+    
+.childbox{
+    width:300px;
+    height:180px;
+    
+    padding: 5px;
+}
+.inputbox{
+    width:300px;
+    height:80px;
+   
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+}
+#GetUsername{
+   
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.296);
+    height: 50px;
+    border-radius: 10px;
+    color: white;
+    padding-inline-start: 30px;
+    border: 1px solid white;
+}
+#GetUsername::placeholder{
+    color:white;
+    text-align: center;
+    
+}
+
+
+.btndiv{
+    width:300px;
+    height:80px;
+    
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+
+}
+button{
+  width:200px;
+  background-color: rgba(0, 0, 0, 0.296);
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid white;
+  color:white;
+  background-color: #090c0e;
+  cursor: pointer;
+
+}
+button:hover{
+    background-color: #090c0e9a;
+}
+.outputBox{
+    width:250px;
+    height:360px;
+    
+    padding: 5px;
+    
+}
+.profile-pic{
+    width: 300px;
+    height:200px;
+   
+    padding:9px;
+}
+.image{
+    width:150px;
+    height:140px;
+    border-radius: 50%;
+    border: 1px solid white;
+    margin-inline-start: 50px;
+}
+.infoBox{
+    width: 300px;
+    height:130px;
+   
+    padding:9px;
+    margin-top: 10px;
+    text-align: center;
+    
+   
+}
+.Name{
+    color: white;
+   
+}
+.Bio{
+    color: white;
+    
+    margin-top: 2px;
+}
+.repos{
+    color: white;
+    
+    margin-top: 2px; 
+}
+.followers{
+    color: white;
+    
+    margin-top: 2px; 
+}
+.following{
+    color: white;
+   
+    margin-top: 2px; 
+}
+    
+    
+}
